# youtube-dl-wrapper

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
config/: config.yaml
root/etc/cont-init.d/: 10-adduser
root/etc/services.d/youtube-dl/: run
youtube_dl_wrapper/: __main__.py  base.py  singleton.py
